--- a/site/index.html
+++ b/site/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HELLO COURSERA</title>
 </head>
+
 <body>
     <h1>
-        HELLO COURSERA! It's a great course
+        HELLO COURSERA! It's a great course. I am loving it.
     </h1>
 </body>
+
 </html>
