--- a/site/index.html
+++ b/site/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>
-        HELLO COURSERA! It's a great course.
+        HELLO COURSERA! It's a great course.I have a big idea to win.
     </h1>
 </body>
 
