--- a/site/index.html
+++ b/site/index.html
@@ -10,8 +10,7 @@
 
 <body>
     <h1>
-        HELLO COURSERA! It's a great course.I have a big idea to win.
+        HELLO COURSERA! It's a great course.
     </h1>
 </body>
-
 </html>
