--- a/site/semantic tags.html
+++ b/site/semantic tags.html
@@ -30,8 +30,15 @@
     <aside>
         ASIDE- Some information that relates to the main topic, i.e. related post
     </aside>
-        <footer>
-            JHU copyright 2015
-        </footer>
+    <footer>
+        JHU copyright 2015
+    </footer>
+    <div></div>
+    <li>
+        <ul>well chosen contetn og h1 element is crucial to SEO.</ul>
+        <ul>Sementic elements allow for more menaningful expression of our HTML page.</ul>
+    </li>
+    </div>
 </body>
+
 </html>
