--- a/site/HTML character entity W1 L8.html
+++ b/site/HTML character entity W1 L8.html
@@ -21,12 +21,11 @@
         <li>space- &nbsp;</li>
     </ul>
     <p>
-        space is used, when you have to use space but without using space key. It is often used when nothing works, you
+        space is used, when you have to use a lot of spaces (because html only uses one space and ingores of the other spaces) or space but without using space key. It is often used when nothing works, you
         want to wrap the whole text at the same time. Then,&nbsp;we&nbsp;use&nbsp;this.
     </p>
     <p>
-        Now, The above words are going to stay togethor, even if we shorten the screen to wrap the text. These 4 words
-        will get in the next line at the same time.
+        Now, The above words are going to stay togethor, even if we shorten the screen to wrap the text. These 4 words will get in the next line at the same time.
     </p>
 
 </body>
