--- a/site/HTML character entity W1 L8.html
+++ b/site/HTML character entity W1 L8.html
@@ -25,7 +25,7 @@
         want to wrap the whole text at the same time. Then,&nbsp;we&nbsp;use&nbsp;this.
     </p>
     <p>
-        Now, The above words are going to stay togethor, even if we shorten the screen to wrap the text. These 4 words will get in the next line at the same time.
+        Now, The above words are going to stay togethor, even if we shorten the screen to wrap the text. These 4 words will get in the next line at the same time.So, you make sure that the 4 words in an HTML document ALWAYS appear together on 1 line, even if the text word-wraps because the browser window is too narrow for that text line.
     </p>
 
 </body>
