--- a/site/W1 L6 semantic tags.html
+++ b/site/W1 L6 semantic tags.html
@@ -14,7 +14,7 @@
         Sometimes, navigation is containe in the header as well.
         <nav>nav (short for navgation) element- Usually containes links to different parts of the website.</nav>
     </header>
-    <h1>Main heading of the page (hard not to have it.)</h1>
+    <h1>Main heading of the page (hard not to have it)</h1>
     <section>
         Section-1
         <article>Article 1</article>
