--- a/site/W1 L7 Lists.html
+++ b/site/W1 L7 Lists.html
@@ -30,10 +30,10 @@
     </div>
     <h2>Ordered List</h2>
     <div>
-        Oreo cookie aking recipie.
+        Oreo cookie baking recipie.
         <ol>
             <li>open box</li>
-            <li>Tale out cookie</li>
+            <li>Take out cookie</li>
             <li>Make a double oreo
                 <ol>
                     <li>Peel of top part</li>
