HTML character entity

--- a/site/W1 L8 HTML character entity.html
+++ b/site/W1 L8 HTML character entity.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>HTML character entity.</h1>
+    <h1>HTML character entity</h1>
     <p>
         There are some characters in html, which we cannot use casually, because, they are part of the markup language.
         Like Pointed brackets and ampecent (short form of hand. So, to make these symbols, we use special codes.
