--- a/site/W1 L9 links.html
+++ b/site/W1 L9 links.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1 id="Top">This is top.</h1>
+    <h1 id="Top">This is top</h1>
     <a href="https://www.google.com/">THis is an anchor tag to google.com.</a>
     <a href="https://www.google.com/"><span>An anchor tag surrounding an inline element acts as an inline
             element.</span></a>
