--- a/site/W1 L10 images.html
+++ b/site/W1 L10 images.html
@@ -10,8 +10,10 @@
 
 <body>
     <h1>images</h1>
-    <img src="https://www.istockphoto.com/photo/pretty-young-teenage-girl-relaxing-on-a-grass-gm521982322-91493961?utm_source=pixabay&utm_medium=affiliate&utm_campaign=SRP_photo_sponsored&referrer_url=&utm_term=%D0%B4%D0%B5%D0%B2%D1%83%D1%88%D0%BA%D0%B0%20%D1%80%D0%BE%D0%BC%D0%B0%D1%88%D0%BA%D0%B0" height="100px" width="100px"> If you put the height and width of the image without putting any alt tag, then, the same height and width will be displayed on your browser, even if the image doesnot render.
-    <p>no image</p>
+    <img src="https://www.istockphoto.com/photo/pretty-young-teenage-girl-relaxing-on-a-grass-gm521982322-91493961?utm_source=pixabay&utm_medium=affiliate&utm_campaign=SRP_photo_sponsored&referrer_url=&utm_term=%D0%B4%D0%B5%D0%B2%D1%83%D1%88%D0%BA%D0%B0%20%D1%80%D0%BE%D0%BC%D0%B0%D1%88%D0%BA%D0%B0"
+        height="100px" width="100px">
+    <p>If you put the height and width of the image without putting any alt tag, then, the same height and width will be
+        displayed on your browser, even if the image doesnot render.</p>
 </body>
 
 </html>
