--- a/site/W0 L3index.html
+++ b/site/W0 L3index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>
-        HELLO COURSERA! It's a great course.
+        HELLO COURSERA! It's a great course. I am loving it.
     </h1>
 </body>
 </html>
