--- a/CSS/W2 L20 background property/W2 L20 background property.html
+++ b/CSS/W2 L20 background property/W2 L20 background property.html
@@ -7,8 +7,7 @@
 #bg {
   width: 500px;
   height: 500px;
-  background: url('yaakov.png') no-repeat top center;
-  background-color: blue;
+  background: url('download.png') no-repeat top center blue;
 }
 
 
