absolute and relative position

--- a/CSS/W2 L22 absolute and relative positioning.html
+++ b/CSS/W2 L22 absolute and relative positioning.html
@@ -61,7 +61,7 @@
         <p id="p3"></p>
         <p id="p4"></p>
     </div>
-    <p>
+    <footer>
     <ul>
         SUMMARY
         <li>static positioning is default for all elements, except html. Html actually has it's positioning set to
@@ -81,7 +81,7 @@
             move around a whole set of elements and not just one.
         </li>
     </ul>
-    </p>
+    </footer>>
 </body>
 
 </html>
